# python-blockchain

./: .env.local  .gitignore  .pre-commit-config.yaml  Makefile  Makefile.variable  docker-compose.yml
src/: main.py
src/api/views/: __init__.py
src/blockchain/: block.py  blockchain.py  transaction_pool.py
src/couchdb/: db.py
src/ellipse/: hash.py  pricate_key.py  signature.py
src/ellipse/base/: __init__.py  field_element.py  point.py
src/ellipse/secp256k1/: __init__.py  constants.py  secp256k1_field.py  secp256k1_point.py
system/python/: pyproject.toml
system/shell/: build.sh  debug.sh
