[tool.poetry]
name = "python-blockchain"
version = "0.1.0"
description = ""
authors = ["Alexey Lapitski <alexey.lapitski@intexsoft.by>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
